tweaked imaged and font sizing

--- a/contact-us.html
+++ b/contact-us.html
@@ -36,7 +36,7 @@
               </div>
         </nav>
         <div class="container-fluid px-0 navbar-adjustment homepage-image">
-            <img src="./images/StPauls.jpg" class="img-fluid h-100 w-100" alt="Eiger Mountain">
+            <img src="./images/StPauls.jpg" class="img-fluid w-100 h-100" alt="St Paul's Catherdral">
         </div>
         <div class="jumbotron jumbotron-fluid m-0 py-3">
           <div class="container relative">
