--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <nav class="navbar fixed-top navbar-expand-md bg-light navbar-light py-4">
+    <nav class="navbar fixed-top navbar-expand-sm bg-light navbar-light py-4">
         <a class="navbar-brand offset-1" href="index.html">
                 <img src="./images/EigerSearch.jpg" class="img-fluid" alt="logo">
         </a>
@@ -36,7 +36,7 @@
         </div>
     </nav>
     <div class="container-fluid px-0 navbar-adjustment homepage-image">
-      <img src="./images/Mountain1.jpg" class="img-fluid h-100 w-100" alt="Eiger Mountain">
+      <img src="./images/Mountain1.jpg" class="img-fluid w-100 h-100" alt="Eiger Mountain">
     </div>
     <div class="jumbotron jumbotron-fluid m-0 py-3">
       <div class="container">
@@ -51,7 +51,7 @@
         Heads of Financial Crime and key senior management and team members. Our regulatory experience includes investment banking, markets, 
         asset management and wealth management businesses.
         <br><br>
-          <ul>
+          <ul class="list-content">
             <li>We are a niche force in compliance recruitment and consulting</li>
             <li>Our key differentiator is our unique combination of compliance executive search and technical 
                 compliance expertise together with an approach tailored to the specific needs of each client </li>
