--- a/what-we-do.html
+++ b/what-we-do.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-        <nav class="navbar fixed-top navbar-expand-sm bg-light navbar-light py-4 m-0">
+        <nav class="navbar fixed-top navbar-expand-sm bg-light navbar-light py-4">
             <a class="navbar-brand offset-1" href="index.html">
                     <img src="./images/EigerSearch.jpg" class="img-fluid" alt="logo">
             </a>
@@ -36,7 +36,7 @@
               </div>
         </nav>
         <div class="container-fluid px-0 navbar-adjustment homepage-image">
-            <img src="./images/CanaryWharf.jpg" class="img-fluid h-100 w-100" alt="Eiger Mountain">
+            <img src="./images/CanaryWharf.jpg" class="img-fluid w-100 h-100" alt="Canary Wharf">
         </div>
         <div class="jumbotron jumbotron-fluid m-0 py-3">
           <div class="container">
@@ -70,12 +70,12 @@
               <strong>Regulatory Consulting</strong>
               <br><br>
               Strategic compliance consulting partners: provision of specialist compliance support services delivered by experienced former in-house compliance practitioners on demand.
-              <ul>
+              <ul class="list-content">
                 <li>We provide our consulting clients with access to our extensive network of senior regulatory specialists.  
                   This network stretches back well over 20 years and offers to our clients individuals who have worked at investment banks, 
                   private banks, brokerages, asset managers, regulators and consulting firms. </li>
                 <li>We can deploy experts with experience in:</li>
-                  <ul>
+                  <ul class="list-content">
                     <li>Advisory Compliance (Global Markets, Capital Markets, Wealth Management, Buy-side)</li>
                     <li>Anti-Financial Crime (KYC/AML, ABC, Sanctions)</li>
                     <li>Monitoring & Surveillance / Testing</li>
@@ -86,7 +86,7 @@
                     <li>Training and education</li>
                   </ul>
                 <li>We provide consulting resources to lead – or support – a range of Compliance management challenges including:</li>
-                  <ul>
+                  <ul class="list-content">
                     <li>Strategic compliance advice</li>
                     <li>Organisational strategy and design</li>
                     <li>Compliance risk and control reviews</li>
