--- a/who-we-are.html
+++ b/who-we-are.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-        <nav class="navbar fixed-top navbar-expand-md bg-light navbar-light py-4">
+        <nav class="navbar fixed-top navbar-expand-sm bg-light navbar-light py-4">
             <a class="navbar-brand offset-1" href="index.html">
                     <img src="./images/EigerSearch.jpg" class="img-fluid" alt="logo">
             </a>
@@ -36,7 +36,7 @@
               </div>
         </nav>
         <div class="container-fluid px-0 navbar-adjustment homepage-image">
-            <img src="./images/LondonSkyline.jpg" class="img-fluid h-100 w-100" alt="Eiger Mountain">
+            <img src="./images/LondonSkyline1.jpg" class="img-fluid w-100 h-100" alt="London Skyline">
         </div>
         <div class="jumbotron jumbotron-fluid m-0 py-3">
           <div class="container">
