tweaked images again

--- a/what-we-do.html
+++ b/what-we-do.html
@@ -36,7 +36,7 @@
               </div>
         </nav>
         <div class="container-fluid px-0 navbar-adjustment homepage-image">
-            <img src="./images/CanaryWharf.jpg" class="img-fluid w-100 h-100" alt="Canary Wharf">
+            <img src="./images/CanaryWharf.jpg" class="img-fluid w-100 h-100" alt="Eiger Mountain">
         </div>
         <div class="jumbotron jumbotron-fluid m-0 py-3">
           <div class="container">
