tweaked image classes

--- a/what-we-do.html
+++ b/what-we-do.html
@@ -35,7 +35,7 @@
                   </ul>
               </div>
         </nav>
-        <div class="container-fluid px-0 navbar-adjustment">
+        <div class="container-fluid px-0 navbar-adjustment relative homepage-image">
             <img src="./images/CanaryWharf.jpg" class="img-fluid w-100 h-100" alt="Eiger Mountain">
         </div>
         <div class="jumbotron jumbotron-fluid m-0 py-3">
