--- a/what-we-do.html
+++ b/what-we-do.html
@@ -3,7 +3,7 @@
     <head>
         <title>What We Do</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Formed in 2007, EigerSearch Limited is a London based financial services Executive Search firm. Our specialist focus is Compliance."/>
         <meta name="author" content="Website designed by Englund Designs, www.englunddesigns.com"/>
         <meta name="keywords" content="management, financial, banking, investment, recruitment, search, eiger, malcolm, hill, london, compliance, anti, money, laundering, compliance, regulatory, regulation, hedge, funds, consulting, city, banks, mlro, cf10, cf11,Equities, Fixed Income, Officer, Director, VP, Commodities, Control Room" />
