--- a/what-we-do.html
+++ b/what-we-do.html
@@ -35,8 +35,8 @@
                   </ul>
               </div>
         </nav>
-        <div class="container-fluid px-0 navbar-adjustment relative homepage-image">
-            <img src="./images/CanaryWharf.jpg" class="img-fluid w-100 h-100" alt="Eiger Mountain">
+        <div class="container-fluid px-0 navbar-adjustment homepage-image">
+            <img src="./images/CanaryWharf.jpg" class="w-100 h-100" alt="Eiger Mountain">
         </div>
         <div class="jumbotron jumbotron-fluid m-0 py-3">
           <div class="container">
