--- a/what-we-do.html
+++ b/what-we-do.html
@@ -36,7 +36,8 @@
               </div>
         </nav>
         <div class="container-fluid px-0 navbar-adjustment homepage-image">
-            <img src="./images/CanaryWharf.jpg" class="w-100 h-100" alt="Eiger Mountain">
+          <p>I AM HERE</p>
+            <!--<img src="./images/CanaryWharf.jpg" class="w-100 h-100" alt="Eiger Mountain">-->
         </div>
         <div class="jumbotron jumbotron-fluid m-0 py-3">
           <div class="container">
