tweaked images again

--- a/what-we-do.html
+++ b/what-we-do.html
@@ -35,7 +35,7 @@
                   </ul>
               </div>
         </nav>
-        <div class="container-fluid px-0 navbar-adjustment homepage-image">
+        <div class="navbar-adjustment homepage-image">
           <p>I AM HERE</p>
             <!--<img src="./images/CanaryWharf.jpg" class="w-100 h-100" alt="Eiger Mountain">-->
         </div>
