--- a/what-we-do.html
+++ b/what-we-do.html
@@ -102,15 +102,15 @@
           <div class="jumbotron jumbotron-fluid bg-light py-0 mb-0 mx-auto">
             <div class="container">
               <div class="row pt-3">
-                  <div class="col my-auto text-left">
+                  <div class="col-sm-6 col-12 my-auto text-left">
                     © EigerSearch Limited 2019
                   </div>
-                  <div class="col my-auto text-right">
+                  <div class="col-sm-6 col-12 my-auto text-right">
                     <a href="downloads/privacy_statement" download="Privacy Statement" target="_blank">Privacy Statement</a>
                   </div> 
               </div>
               <div class="row">
-                <div class="col my-auto text-center">
+                <div class="col-12 my-auto text-center">
                   <p class="creator">
                       Website By Englund Designs
                   </p>
