--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </nav>
     <div class="container-fluid px-0 navbar-adjustment homepage-image">
-      <img src="./images/Mountain1.jpg" class="img-fluid w-100 h-100" alt="Eiger Mountain">
+      <img src="./images/Mountain.jpg" class="img-fluid w-100 h-100" alt="Eiger Mountain">
     </div>
     <div class="jumbotron jumbotron-fluid m-0 py-3">
       <div class="container">
