--- a/who-we-are.html
+++ b/who-we-are.html
@@ -36,7 +36,7 @@
               </div>
         </nav>
         <div class="container-fluid px-0 navbar-adjustment homepage-image">
-            <img src="./images/LondonSkyline1.jpg" class="img-fluid w-100 h-100" alt="London Skyline">
+            <img src="./images/LondonSkyline.jpg" class="img-fluid w-100 h-100" alt="London Skyline">
         </div>
         <div class="jumbotron jumbotron-fluid m-0 py-3">
           <div class="container">
