--- a/who-we-are.html
+++ b/who-we-are.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Website designed by Englund Designs, www.englunddesigns.com"/>
         <meta name="keywords" content="management, financial, banking, investment, recruitment, search, eiger, malcolm, hill, london, compliance, anti, money, laundering, compliance, regulatory, regulation, hedge, funds, consulting, city, banks, mlro, cf10, cf11,Equities, Fixed Income, Officer, Director, VP, Commodities, Control Room" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="./css/styles-v1.0.0.css">
     </head>
     <body>
         <nav class="navbar fixed-top navbar-expand-sm bg-light navbar-light py-4">
