--- a/contact-us.html
+++ b/contact-us.html
@@ -3,6 +3,7 @@
     <head>
         <title>Contact Us</title>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="Formed in 2007, EigerSearch Limited is a London based financial services Executive Search firm. Our specialist focus is Compliance."/>
         <meta name="author" content="Website designed by Englund Designs, www.englunddesigns.com"/>
