--- a/contact-us.html
+++ b/contact-us.html
@@ -12,87 +12,91 @@
         <link rel="stylesheet" href="./css/styles-v1.0.0.css">
     </head>
     <body>
-        <nav class="navbar fixed-top navbar-expand-sm bg-light navbar-light py-4">
-            <a class="navbar-brand offset-1" href="index.html">
-                    <img src="./images/EigerSearch.jpg" class="img-fluid" alt="logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobileNavbar">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse"  id="mobileNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link" href="index.html">Home Page</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="who-we-are.html">Who We Are</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="what-we-do.html">What We Do</a>
-                    </li>
-                    <li class="nav-item active">
-                      <a class="nav-link" href="contact-us.html">Contact Us</a>
-                    </li>
-                  </ul>
-              </div>
-        </nav>
-        <div class="container-fluid px-0 navbar-adjustment homepage-image">
-            <img src="./images/StPauls.jpg" class="img-fluid w-100 h-100" alt="St Paul's Catherdral">
-        </div>
-        <div class="jumbotron jumbotron-fluid m-0 py-3">
-          <div class="container relative">
-            <p class="p-content">Thank you for visiting our website.
-              <br><br>
-              We would be delighted to provide you with further information. Please contact us at:
-              <br><br>
-              EigerSearch<br>
-              4 Lombard Street<br>
-              London<br>
-              EC3V 9HD
-              <br><br>
-              Tel:  +44 (0) 20 7190 2841 &nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="mailto:info@eigersearch.com">info@eigersearch.com</a>
-              <br><br>
-              EigerSearch is a company Registered in England and Wales.  Company number is 6267095.
-              <br><br>
-            </p>
-            <p class="img-attribute">
-              <span>“</span>
-              <a href="https://flic.kr/p/WjThqq" target="_blank" rel="noopener">
-                <span>London</span>
-              </a>
-              <span>”, by </span>
-              <a href="https://flic.kr/ps/2jB2GG" target="_blank" rel="noopener">
-                <span>LWYang</span>
-              </a>
-              <span>, is licensed under </span>
-              <a href="https://creativecommons.org/licenses/by/2.0/" target="_blank" rel="noopener">
-                <span>CC BY 2.0</span>
-              </a>
-            </p>
-          </div>
-        </div>
-        <footer class="footer">
-          <div class="jumbotron jumbotron-fluid bg-light py-0 mb-0 mx-auto">
-            <div class="container">
-              <div class="row pt-3">
-                  <div class="col-sm-6 col-12 my-auto text-left">
-                    © EigerSearch Limited 2019
+      <div class="ie-fixMinHeight">
+        <div class="content">
+            <nav class="navbar fixed-top navbar-expand-sm bg-light navbar-light py-4">
+                <a class="navbar-brand offset-1" href="index.html">
+                        <img src="./images/EigerSearch.jpg" class="img-fluid" alt="logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobileNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse"  id="mobileNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                          <a class="nav-link" href="index.html">Home Page</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="who-we-are.html">Who We Are</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="what-we-do.html">What We Do</a>
+                        </li>
+                        <li class="nav-item active">
+                          <a class="nav-link" href="contact-us.html">Contact Us</a>
+                        </li>
+                      </ul>
                   </div>
-                  <div class="col-sm-6 col-12 my-auto text-right">
-                    <a href="downloads/privacy_statement" download="Privacy Statement" target="_blank">Privacy Statement</a>
-                  </div> 
-              </div>
-              <div class="row">
-                <div class="col-12 my-auto text-center">
-                  <p class="creator">
-                      Website By Englund Designs
-                  </p>
-                </div>
+            </nav>
+            <div class="container-fluid px-0 navbar-adjustment relative homepage-image">
+                <img src="./images/StPauls.jpg" class="img-fluid relative w-100 h-100" alt="St Paul's Catherdral">
+            </div>
+            <div class="jumbotron jumbotron-fluid m-0 py-3">
+              <div class="container relative">
+                <p class="p-content">Thank you for visiting our website.
+                  <br><br>
+                  We would be delighted to provide you with further information. Please contact us at:
+                  <br><br>
+                  EigerSearch<br>
+                  4 Lombard Street<br>
+                  London<br>
+                  EC3V 9HD
+                  <br><br>
+                  Tel:  +44 (0) 20 7190 2841 &nbsp;&nbsp;&nbsp;&nbsp;
+                  <a href="mailto:info@eigersearch.com">info@eigersearch.com</a>
+                  <br><br>
+                  EigerSearch is a company Registered in England and Wales.  Company number is 6267095.
+                  <br><br>
+                </p>
+                <p class="img-attribute">
+                  <span>“</span>
+                  <a href="https://flic.kr/p/WjThqq" target="_blank" rel="noopener">
+                    <span>London</span>
+                  </a>
+                  <span>”, by </span>
+                  <a href="https://flic.kr/ps/2jB2GG" target="_blank" rel="noopener">
+                    <span>LWYang</span>
+                  </a>
+                  <span>, is licensed under </span>
+                  <a href="https://creativecommons.org/licenses/by/2.0/" target="_blank" rel="noopener">
+                    <span>CC BY 2.0</span>
+                  </a>
+                </p>
               </div>
             </div>
+            <footer class="footer">
+              <div class="jumbotron jumbotron-fluid bg-light py-0 mb-0 mx-auto">
+                <div class="container">
+                  <div class="row pt-3">
+                      <div class="col-sm-6 col-12 my-auto text-left">
+                        © EigerSearch Limited 2019
+                      </div>
+                      <div class="col-sm-6 col-12 my-auto text-right">
+                        <a href="downloads/privacy_statement" download="Privacy Statement" target="_blank">Privacy Statement</a>
+                      </div> 
+                  </div>
+                  <div class="row">
+                    <div class="col-12 my-auto text-center">
+                      <p class="creator">
+                          Website By Englund Designs
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </footer>
           </div>
-        </footer>
+        </div>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
