--- a/index.html
+++ b/index.html
@@ -12,77 +12,81 @@
     <link rel="stylesheet" href="./css/styles-v1.0.0.css">
   </head>
   <body>
-    <nav class="navbar fixed-top navbar-expand-sm bg-light navbar-light py-4">
-        <a class="navbar-brand offset-1" href="index.html">
-                <img src="./images/EigerSearch.jpg" class="img-fluid" alt="logo">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobileNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse"  id="mobileNavbar">
-          <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home Page</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="who-we-are.html">Who We Are</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="what-we-do.html">What We Do</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact-us.html">Contact Us</a>
-              </li>
-            </ul>
+    <div class="ie-fixMinHeight">
+      <div class="content">
+        <nav class="navbar fixed-top navbar-expand-sm bg-light navbar-light py-4">
+            <a class="navbar-brand offset-1" href="index.html">
+                    <img src="./images/EigerSearch.jpg" class="img-fluid" alt="logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobileNavbar">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse"  id="mobileNavbar">
+              <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home Page</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="who-we-are.html">Who We Are</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="what-we-do.html">What We Do</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact-us.html">Contact Us</a>
+                  </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="container-fluid px-0 navbar-adjustment relative homepage-image">
+          <img src="./images/Mountain.jpg" class="img-fluid relative w-100 h-100" alt="Eiger Mountain">
         </div>
-    </nav>
-    <div class="container-fluid px-0 navbar-adjustment homepage-image">
-      <img src="./images/Mountain.jpg" class="img-fluid w-100 h-100" alt="Eiger Mountain">
-    </div>
-    <div class="jumbotron jumbotron-fluid m-0 py-3">
-      <div class="container">
-        <p class="p-content">EigerSearch was formed in 2007.  
-          Our focus is the provision of combined regulatory consulting and human capital solutions. 
-          We are a London-based firm and have worked with financial services clients to provide specialist advice and human capital to minimise their regulatory risks.
-        <br><br>
-        Our clients leverage our regulatory technical expertise which dates from 1989 and our regulatory executive search experience from 1998.  
-        <br><br>
-        Our target market includes global investment banks, asset managers, private banks, brokerages and consultancies.  
-        As a provider of executive search services, we have successfully placed at global, regional and local levels, numerous Heads of Compliance, 
-        Heads of Financial Crime and key senior management and team members. Our regulatory experience includes investment banking, markets, 
-        asset management and wealth management businesses.
-        <br><br>
-          <ul class="list-content">
-            <li>We are a niche force in compliance recruitment and consulting</li>
-            <li>Our key differentiator is our unique combination of compliance executive search and technical 
-                compliance expertise together with an approach tailored to the specific needs of each client </li>
-            <li>We deliver a broad range of compliance resourcing and consulting solutions to global firms</li>
-            <li>In contrast to what are normally separate service providers, we are a one stop solutions business and have an alliance of partners and service providers</li>
-          </ul>
-        </p>
-      </div>
-    </div>
-    <footer class="footer">
-      <div class="jumbotron jumbotron-fluid bg-light py-0 mb-0 mx-auto">
-        <div class="container">
-          <div class="row pt-3">
-              <div class="col-sm-6 col-12 my-auto text-left">
-                © EigerSearch Limited 2019
-              </div>
-              <div class="col-sm-6 col-12 my-auto text-right">
-                <a href="downloads/privacy_statement" download="Privacy Statement" target="_blank">Privacy Statement</a>
-              </div> 
+        <div class="jumbotron jumbotron-fluid m-0 py-3">
+          <div class="container">
+            <p class="p-content">EigerSearch was formed in 2007.  
+              Our focus is the provision of combined regulatory consulting and human capital solutions. 
+              We are a London-based firm and have worked with financial services clients to provide specialist advice and human capital to minimise their regulatory risks.
+            <br><br>
+            Our clients leverage our regulatory technical expertise which dates from 1989 and our regulatory executive search experience from 1998.  
+            <br><br>
+            Our target market includes global investment banks, asset managers, private banks, brokerages and consultancies.  
+            As a provider of executive search services, we have successfully placed at global, regional and local levels, numerous Heads of Compliance, 
+            Heads of Financial Crime and key senior management and team members. Our regulatory experience includes investment banking, markets, 
+            asset management and wealth management businesses.
+            <br><br>
+              <ul class="list-content">
+                <li>We are a niche force in compliance recruitment and consulting</li>
+                <li>Our key differentiator is our unique combination of compliance executive search and technical 
+                    compliance expertise together with an approach tailored to the specific needs of each client </li>
+                <li>We deliver a broad range of compliance resourcing and consulting solutions to global firms</li>
+                <li>In contrast to what are normally separate service providers, we are a one stop solutions business and have an alliance of partners and service providers</li>
+              </ul>
+            </p>
           </div>
-          <div class="row">
-            <div class="col-12 my-auto text-center">
-              <p class="creator">
-                  Website By Englund Designs
-              </p>
+        </div>
+        <footer class="footer">
+          <div class="jumbotron jumbotron-fluid bg-light py-0 mb-0 mx-auto">
+            <div class="container">
+              <div class="row pt-3">
+                  <div class="col-sm-6 col-12 my-auto text-left">
+                    © EigerSearch Limited 2019
+                  </div>
+                  <div class="col-sm-6 col-12 my-auto text-right">
+                    <a href="downloads/privacy_statement" download="Privacy Statement" target="_blank">Privacy Statement</a>
+                  </div> 
+              </div>
+              <div class="row">
+                <div class="col-12 my-auto text-center">
+                  <p class="creator">
+                      Website By Englund Designs
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
+        </footer>
       </div>
-    </footer>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
