--- a/what-we-do.html
+++ b/what-we-do.html
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="./css/styles-v1.0.0.css">
     </head>
     <body>
+      <div class="ie-fixMinHeight">
+        <div class="content">
         <nav class="navbar fixed-top navbar-expand-sm bg-light navbar-light py-4">
             <a class="navbar-brand offset-1" href="index.html">
                     <img src="./images/EigerSearch.jpg" class="img-fluid" alt="logo">
@@ -36,90 +38,92 @@
                   </ul>
               </div>
         </nav>
-        <div class="container-fluid px-0 navbar-adjustment homepage-image">
-          <img src="./images/CanaryWharf.jpg" class="img-fluid w-100 h-100" alt="Canary Wharf">
+        <div class="container-fluid px-0 navbar-adjustment relative homepage-image">
+          <img src="./images/CanaryWharf.jpg" class="img-fluid relative w-100 h-100" alt="Canary Wharf">
         </div>
-        <div class="jumbotron jumbotron-fluid m-0 py-3">
-          <div class="container">
-            <p class="p-content">
-                Our track-record and network gives us access to investment banks, wealth managers, brokerages, consulting firms, asset managers,
-                 hedge funds, fintech and private equity firms. We have worked in and across a mix of jurisdictions.
-              <br><br>
-              Everything we do for our clients is with a tailored and bespoke approach.  Our services are:
-              <br><br>
-            </p>
-            <p class="p-content">
-              <strong>Compliance and Anti-financial Crime Resourcing:</strong>
-              <br><br>
-              We work closely and discreetly with our clients across the regulatory sector and offer retained executive search, 
-              contingent recruitment and contractor solutions. 
-              We provide our clients with permanent resourcing solutions as well as a flexible solution providing access to a bench of experienced 
-              compliance contractors and interim specialists.
-              <br><br>
-              Our extensive network of regulatory talent allows us to approach some of the best specialists to see if they would be interested in working with our clients.  
-              We understand what a client needs from a recruitment partner having been specialising in this since 1998. 
-              Our in-depth market intelligence separates us from the many recruitment firms who rely heavily on social media led intelligence. 
-              For some of our longer-standing candidates, we have helped them to secure several new roles during their career.
-              <br><br>
-              We typically focus on assignments which extend from VP to Managing Director levels.  
-              Our executive search track record ranges from Global Head appointments to filling key team member roles.  
-              Our access to senior talent allows us to also help clients identify potential independent NEDs with regulatory experience. 
-              With our network of professionals with extensive regulatory experience we can also assist with the search for expert witnesses.
-              <br><br>     
-            </p>
-            <p class="p-content">
-              <strong>Regulatory Consulting</strong>
-              <br><br>
-              Strategic compliance consulting partners: provision of specialist compliance support services delivered by experienced former in-house compliance practitioners on demand.
-              <ul class="list-content">
-                <li>We provide our consulting clients with access to our extensive network of senior regulatory specialists.  
-                  This network stretches back well over 20 years and offers to our clients individuals who have worked at investment banks, 
-                  private banks, brokerages, asset managers, regulators and consulting firms. </li>
-                <li>We can deploy experts with experience in:</li>
+            <div class="jumbotron jumbotron-fluid m-0 py-3">
+              <div class="container">
+                <p class="p-content">
+                    Our track-record and network gives us access to investment banks, wealth managers, brokerages, consulting firms, asset managers,
+                     hedge funds, fintech and private equity firms. We have worked in and across a mix of jurisdictions.
+                  <br><br>
+                  Everything we do for our clients is with a tailored and bespoke approach.  Our services are:
+                  <br><br>
+                </p>
+                <p class="p-content">
+                  <strong>Compliance and Anti-financial Crime Resourcing:</strong>
+                  <br><br>
+                  We work closely and discreetly with our clients across the regulatory sector and offer retained executive search, 
+                  contingent recruitment and contractor solutions. 
+                  We provide our clients with permanent resourcing solutions as well as a flexible solution providing access to a bench of experienced 
+                  compliance contractors and interim specialists.
+                  <br><br>
+                  Our extensive network of regulatory talent allows us to approach some of the best specialists to see if they would be interested in working with our clients.  
+                  We understand what a client needs from a recruitment partner having been specialising in this since 1998. 
+                  Our in-depth market intelligence separates us from the many recruitment firms who rely heavily on social media led intelligence. 
+                  For some of our longer-standing candidates, we have helped them to secure several new roles during their career.
+                  <br><br>
+                  We typically focus on assignments which extend from VP to Managing Director levels.  
+                  Our executive search track record ranges from Global Head appointments to filling key team member roles.  
+                  Our access to senior talent allows us to also help clients identify potential independent NEDs with regulatory experience. 
+                  With our network of professionals with extensive regulatory experience we can also assist with the search for expert witnesses.
+                  <br><br>     
+                </p>
+                <p class="p-content">
+                  <strong>Regulatory Consulting</strong>
+                  <br><br>
+                  Strategic compliance consulting partners: provision of specialist compliance support services delivered by experienced former in-house compliance practitioners on demand.
                   <ul class="list-content">
-                    <li>Advisory Compliance (Global Markets, Capital Markets, Wealth Management, Buy-side)</li>
-                    <li>Anti-Financial Crime (KYC/AML, ABC, Sanctions)</li>
-                    <li>Monitoring & Surveillance / Testing</li>
-                    <li>SMEs in, for example, conduct risk, SM&CR, GDPR, Conflicts, CASS, Transaction Reporting, LIBOR, Benchmarks, MIFID2 and EMIR</li>
-                    <li>Regulatory change project management and business analysis</li>
-                    <li>Compliance strategy and risk assessment</li>
-                    <li>Policy design, drafting and implementation</li>
-                    <li>Training and education</li>
+                    <li>We provide our consulting clients with access to our extensive network of senior regulatory specialists.  
+                      This network stretches back well over 20 years and offers to our clients individuals who have worked at investment banks, 
+                      private banks, brokerages, asset managers, regulators and consulting firms. </li>
+                    <li>We can deploy experts with experience in:</li>
+                      <ul class="list-content">
+                        <li>Advisory Compliance (Global Markets, Capital Markets, Wealth Management, Buy-side)</li>
+                        <li>Anti-Financial Crime (KYC/AML, ABC, Sanctions)</li>
+                        <li>Monitoring & Surveillance / Testing</li>
+                        <li>SMEs in, for example, conduct risk, SM&CR, GDPR, Conflicts, CASS, Transaction Reporting, LIBOR, Benchmarks, MIFID2 and EMIR</li>
+                        <li>Regulatory change project management and business analysis</li>
+                        <li>Compliance strategy and risk assessment</li>
+                        <li>Policy design, drafting and implementation</li>
+                        <li>Training and education</li>
+                      </ul>
+                    <li>We provide consulting resources to lead – or support – a range of Compliance management challenges including:</li>
+                      <ul class="list-content">
+                        <li>Strategic compliance advice</li>
+                        <li>Organisational strategy and design</li>
+                        <li>Compliance risk and control reviews</li>
+                        <li>Remediation work: s166 Reviews, Audit Point Remediation, regulatory deliverables</li>
+                        <li>Regulatory implementation</li>
+                        <li>Board, senior management and other stakeholder relationships and reporting</li>
+                      </ul>
                   </ul>
-                <li>We provide consulting resources to lead – or support – a range of Compliance management challenges including:</li>
-                  <ul class="list-content">
-                    <li>Strategic compliance advice</li>
-                    <li>Organisational strategy and design</li>
-                    <li>Compliance risk and control reviews</li>
-                    <li>Remediation work: s166 Reviews, Audit Point Remediation, regulatory deliverables</li>
-                    <li>Regulatory implementation</li>
-                    <li>Board, senior management and other stakeholder relationships and reporting</li>
-                  </ul>
-              </ul>
-            </p>
-          </div>
-        </div>
-        <footer class="footer">
-          <div class="jumbotron jumbotron-fluid bg-light py-0 mb-0 mx-auto">
-            <div class="container">
-              <div class="row pt-3">
-                  <div class="col-sm-6 col-12 my-auto text-left">
-                    © EigerSearch Limited 2019
-                  </div>
-                  <div class="col-sm-6 col-12 my-auto text-right">
-                    <a href="downloads/privacy_statement" download="Privacy Statement" target="_blank">Privacy Statement</a>
-                  </div> 
-              </div>
-              <div class="row">
-                <div class="col-12 my-auto text-center">
-                  <p class="creator">
-                      Website By Englund Designs
-                  </p>
-                </div>
+                </p>
               </div>
             </div>
+            <footer class="footer">
+              <div class="jumbotron jumbotron-fluid bg-light py-0 mb-0 mx-auto">
+                <div class="container">
+                  <div class="row pt-3">
+                      <div class="col-sm-6 col-12 my-auto text-left">
+                        © EigerSearch Limited 2019
+                      </div>
+                      <div class="col-sm-6 col-12 my-auto text-right">
+                        <a href="downloads/privacy_statement" download="Privacy Statement" target="_blank">Privacy Statement</a>
+                      </div> 
+                  </div>
+                  <div class="row">
+                    <div class="col-12 my-auto text-center">
+                      <p class="creator">
+                          Website By Englund Designs
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </footer>
           </div>
-        </footer>
+        </div>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
