tweaked font sizing

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Website designed by Englund Designs, www.englunddesigns.com"/>
         <meta name="keywords" content="management, financial, banking, investment, recruitment, search, eiger, malcolm, hill, london, compliance, anti, money, laundering, compliance, regulatory, regulation, hedge, funds, consulting, city, banks, mlro, cf10, cf11,Equities, Fixed Income, Officer, Director, VP, Commodities, Control Room" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="./css/styles-v1.0.0.css">
+        <link rel="stylesheet" href="./css/styles-v1.0.5.css">
     </head>
     <body>
       <div class="ie-fixMinHeight">
@@ -53,19 +53,19 @@
                   All of them have worked in regulatory-aligned roles at investment banks, private banks, brokerages, asset managers, regulators and consulting firms. 
                   Our senior team are:
                   <br><br>
-                  <strong>James Ritchie</strong> – James is a highly experienced global markets and investment banking former compliance managing director.  
+                  <strong>James Ritchie</strong> – James is a highly experienced global markets and investment banking former Compliance managing director.  
                   His regulatory career began in 1995 and he has worked in international advisory, senior management and leadership roles at Credit Suisse, 
                   Barclays Wealth and Barclays Capital.  Earlier in his career he was at the Bank of England and the UK Financial Services Authority.  
                   He has a BA Economics from Nottingham University.
                   <br><br>
                   <strong>Malcolm Hill</strong> – 	Malcolm is one of The City’s longest serving, best connected and most experienced regulatory search specialists.  
                   Since 1998 his focus has been on senior-level compliance and anti-financial crime assignments at up to global head level.  
-                  He established EigerSearch in 2007.  Earlier in his career he was an officer in the British Army.  He has an MBA and a B.Com; both from Edinburgh University.
+                  He established EigerSearch in 2007 and has worked with an array of clients across a mix of projects.  Earlier in his career he was an officer in the British Army.  He has an MBA and a B.Com; both from Edinburgh University.
                   <br><br>
                   <strong>Paul Geradine</strong> – Paul has extensive regulatory Compliance and governance experience, having held senior roles in the London Stock Exchange, 
                   UK Financial Services Authority and various investment banks, including UBS, Deutsche Bank and Credit Suisse. 
                   He began his career as a Chartered Accountant and is a graduate of Corpus Christi College, Oxford. 
-                  Paul provides support to Eiger Search to help develop its profile and to enhance our regulatory consulting offering in areas in which Paul has particular expertise.
+                  Paul provides support to EigerSearch to help develop its profile and to enhance our regulatory consulting offering in areas in which Paul has particular expertise.
                   <br><br>
                 </p>
               </div>
