tweaked headers on what we do

--- a/what-we-do.html
+++ b/what-we-do.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Website designed by Englund Designs, www.englunddesigns.com"/>
         <meta name="keywords" content="management, financial, banking, investment, recruitment, search, eiger, malcolm, hill, london, compliance, anti, money, laundering, compliance, regulatory, regulation, hedge, funds, consulting, city, banks, mlro, cf10, cf11,Equities, Fixed Income, Officer, Director, VP, Commodities, Control Room" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="./css/styles-v1.0.5.css">
+        <link rel="stylesheet" href="./css/styles-v1.0.7.css">
     </head>
     <body>
       <div class="ie-fixMinHeight">
@@ -50,9 +50,11 @@
                   Everything we do for our clients is with a tailored and bespoke approach.  Our services are:
                   <br><br>
                 </p>
-                <p class="p-content">
-                  <strong>Compliance and Anti-financial Crime Resourcing:</strong>
-                  <br><br>
+                  <p class="p-header">
+                    Compliance and Anti-financial Crime Resourcing:
+                  </p>
+                  <p class="p-content">
+                  <br>
                   We work closely and discreetly with our clients across the regulatory sector and offer retained executive search, 
                   contingent recruitment and contractor solutions. 
                   We provide our clients with permanent resourcing solutions as well as a flexible solution providing access to a bench of experienced 
@@ -69,9 +71,11 @@
                   With our network of professionals with extensive regulatory experience we can also assist with the search for expert witnesses.
                   <br><br>     
                 </p>
+                <p class="p-header">
+                  Regulatory Consulting
+                </p>
                 <p class="p-content">
-                  <strong>Regulatory Consulting</strong>
-                  <br><br>
+                  <br>
                   Strategic compliance consulting partners: provision of specialist compliance support services delivered by experienced former in-house compliance practitioners on demand.
                   <ul class="list-content">
                     <li>We provide our consulting clients with access to our extensive network of senior regulatory specialists.  
