Final Commit with text changes and css tweaks

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Website designed by Englund Designs, www.englunddesigns.com"/>
     <meta name="keywords" content="management, financial, banking, investment, recruitment, search, eiger, malcolm, hill, london, compliance, anti, money, laundering, compliance, regulatory, regulation, hedge, funds, consulting, city, banks, mlro, cf10, cf11,Equities, Fixed Income, Officer, Director, VP, Commodities, Control Room" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/styles-v1.0.7.css">
+    <link rel="stylesheet" href="./css/styles-v1.1.0.css">
   </head>
   <body>
     <div class="ie-fixMinHeight">
@@ -47,12 +47,7 @@
               Our focus is the provision of combined regulatory consulting and human capital solutions. 
               We are a London-based firm and have worked with financial services clients to provide specialist advice and human capital to minimise their regulatory risks.
             <br><br>
-            Our clients leverage our regulatory technical expertise which dates from 1989 and our regulatory executive search experience from 1998.  
-            <br><br>
-            Our target market includes global investment banks, asset managers, private banks, brokerages and consultancies.  
-            As a provider of executive search services, we have successfully placed at global, regional and local levels, numerous Heads of Compliance, 
-            Heads of Financial Crime and key senior management and team members. Our regulatory experience includes investment banking, markets, 
-            asset management and wealth management businesses.
+            Our clients can leverage our regulatory technical expertise which covers over 30 years and our regulatory search experience which exceeds 20 years.  
             <br><br>
               <ul class="list-content">
                 <li>We are a niche force in compliance recruitment and consulting</li>
