--- a/what-we-do.html
+++ b/what-we-do.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Website designed by Englund Designs, www.englunddesigns.com"/>
         <meta name="keywords" content="management, financial, banking, investment, recruitment, search, eiger, malcolm, hill, london, compliance, anti, money, laundering, compliance, regulatory, regulation, hedge, funds, consulting, city, banks, mlro, cf10, cf11,Equities, Fixed Income, Officer, Director, VP, Commodities, Control Room" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="./css/styles-v1.0.7.css">
+        <link rel="stylesheet" href="./css/styles-v1.1.0.css">
     </head>
     <body>
       <div class="ie-fixMinHeight">
@@ -51,7 +51,7 @@
                   <br><br>
                 </p>
                   <p class="p-header">
-                    Compliance and Anti-financial Crime Resourcing:
+                    Compliance and Anti-Financial Crime Resourcing:
                   </p>
                   <p class="p-content">
                   <br>
@@ -61,14 +61,14 @@
                   compliance contractors and interim specialists.
                   <br><br>
                   Our extensive network of regulatory talent allows us to approach some of the best specialists to see if they would be interested in working with our clients.  
-                  We understand what a client needs from a recruitment partner having been specialising in this since 1998. 
-                  Our in-depth market intelligence separates us from the many recruitment firms who rely heavily on social media led intelligence. 
+                  We understand our clients' resourcing needs having been a specialist provider in this part of the market for over 20 years. 
+                  We consider that we have an advantage in this area based on our in-depth market intelligence and direct, personal relationships with the candidates in our network. 
                   For some of our longer-standing candidates, we have helped them to secure several new roles during their career.
                   <br><br>
                   We typically focus on assignments which extend from VP to Managing Director levels.  
                   Our executive search track record ranges from Global Head appointments to filling key team member roles.  
-                  Our access to senior talent allows us to also help clients identify potential independent NEDs with regulatory experience. 
-                  With our network of professionals with extensive regulatory experience we can also assist with the search for expert witnesses.
+                  Our access to senior talent also enables us to help clients identify potential independent NEDs with regulatory experience. 
+                  With our network of professionals with extensive regulatory experience we can also assist with the search for candidates to lead skilled persons' investigations and with the search for expert witnesses.
                   <br><br>     
                 </p>
                 <p class="p-header">
@@ -76,16 +76,17 @@
                 </p>
                 <p class="p-content">
                   <br>
-                  Strategic compliance consulting partners: provision of specialist compliance support services delivered by experienced former in-house compliance practitioners on demand.
+                  We are experienced compliance practitioners providing specialist compliance services delivered by experienced former in-house compliance practitioners on demand.
                   <ul class="list-content">
                     <li>We provide our consulting clients with access to our extensive network of senior regulatory specialists.  
                       This network stretches back well over 20 years and offers to our clients individuals who have worked at investment banks, 
                       private banks, brokerages, asset managers, regulators and consulting firms. </li>
                     <li>We can deploy experts with experience in:</li>
                       <ul class="list-content">
-                        <li>Advisory Compliance (Global Markets, Capital Markets, Wealth Management, Buy-side)</li>
+                        <li>Advisory Compliance (Global Markets, Capital Markets, Corporate Finance, Wealth Management, Buy-side)</li>
                         <li>Anti-Financial Crime (KYC/AML, ABC, Sanctions)</li>
-                        <li>Monitoring & Surveillance / Testing</li>
+                        <li>Surveillance</li>
+                        <li>Monitoring, Testing and Compliance Reviews</li>
                         <li>SMEs in, for example, conduct risk, SM&CR, GDPR, Conflicts, CASS, Transaction Reporting, LIBOR, Benchmarks, MIFID2 and EMIR</li>
                         <li>Regulatory change project management and business analysis</li>
                         <li>Compliance strategy and risk assessment</li>
